# npgeohash

./: .gitignore  Cargo.toml  README.ipynb  README.md  pyproject.toml
docs/: gridpoint.ipynb  npgeohash_rs.ipynb  obscured_recursively_compress.ipynb  performance.ipynb
memo/: obscured_recursively_compress.ipynb
notes/: gridpoint.ipynb  performance.ipynb
npgeohash/: _npgeohash_rs.cp311-win_amd64.pyd  _npgeohash_rs.pyi  npgeohash.py  npgeohash_jit.py  npgeohash_rs.py
src/: lib.rs  npgeohash.rs
tools/: croppy.py
